##############################################
# Backlog
##############################################
- move defaultHTML to CFW project
- Session Timeout Configurable

##############################################
# Current
##############################################
- Fix Asynch Log potential missing logs 
- move HTML for login to CFW project
- Fix package resource security issue (CFWSetup.addAllowedPackages())
- add HTTP/HTTPS handling 