@@ -6,6 +6,8 @@ import java.net.URLClassLoader;
 import java.util.ArrayList;
 import java.util.logging.Logger;
 
+import org.eclipse.jetty.rewrite.handler.RedirectRegexRule;
+import org.eclipse.jetty.rewrite.handler.RewriteHandler;
 import org.eclipse.jetty.server.Connector;
 import org.eclipse.jetty.server.HttpConfiguration;
 import org.eclipse.jetty.server.HttpConnectionFactory;
@@ -150,6 +152,7 @@ public class CFWSetup {
 		
 		return contextHandler;
 	}
+	
 	
 	/***********************************************************************
 	 * Setup and returns a ResourceHandler
