@@ -10,4 +10,6 @@
 - Fix Asynch Log potential missing logs 
 - move HTML for login to CFW project
 - Fix package resource security issue (CFWSetup.addAllowedPackages())
-- add HTTP/HTTPS handling 
+- added HTTP/HTTPS handling 
+- added HTTP to HTTPS Redirect 
+- created Default App
